--- a/TODO
+++ b/TODO
@@ -1,21 +1,49 @@
 Write controller board SW
+ * Switch from TIM1 to TIM8
  * Get basic current sampling and PWM structure working
-   * Emit current sample to DAC
+   * Sample from SPI
+   * Get velocity from SPI or ABI encoder outputs
  * Design serial 485 frame protocol
 
 Design controller board
+ * TODO
+   * rs485 con
+    * 3 pin JST - gnd a b
+   * absolute sens con
+    * 4 pin JST - 3.3v gnd i2c
+   * motor temp con
+    * 2 pin JST - thermistor connection
+   * verify pin ordering of programming connector
+   * position parts
+   * mounting holes
+   * power planes
+   * power routing
+   * signal routing
  * STM32F446
  * DRV8323RS (includes buck regulator and SPI interface)
+   * buck inductor
+     * MF 22uF
+   * buck output cap
+     * MF 10uF
+   * buck input cap
+     * MF
+   * motor input caps
+     * TDK C3216X5R1V156M160AC
  * 485 transceiver - MAX13431E
- * FETs
+ * FETs - Toshiba TPN1R603PL
  * Current Shunt
+   * Stackpole Electronics Inc. HCS1206FT1L00 1mOhm 2W
  * Connectors
    * power in
+     * just plated holes
    * BLDC out
+     * just plated holes
    * as5047p (25krpm or as5047d only 14krpm) sensor
    * rs485
    * swd programming port
-   * usb?
+     * JST-6 pin
+   * usb
+     * micro-usb
    * motor temperature sensor
    * motor output absolute encoder / position sensor
 
