--- a/TODO
+++ b/TODO
@@ -1,46 +1,14 @@
+Validate r2 of gearbox
+  * Order 2x more if it works well
+
+Design leg
+Design linear rail for jump fixture
+
 Write controller board SW
  * Get basic current sampling and PWM structure working
    * Sample from SPI
    * Get velocity from SPI or ABI encoder outputs
  * Design serial 485 frame protocol
-
-Design controller board
- * TODO
-   * Get down to 20 unique populated items
-   * signal routing
-   * final silk placement
- * LEDs
-   * status LEDs
- * STM32F446
- * DRV8323RS (includes buck regulator and SPI interface)
-   * buck inductor
-     * MF 22uF
-   * buck output cap
-     * MF 10uF
-   * buck input cap
-     * MF
-   * motor input caps
-     * TDK C3216X5R1V156M160AC
- * 485 transceiver - MAX13431E
- * FETs - Toshiba TPN1R603PL
- * Current Shunt
-   * Stackpole Electronics Inc. HCS1206FT1L00 1mOhm 2W
- * Connectors
-   * power in
-     * just plated holes
-   * BLDC out
-     * just plated holes
-   * as5047p (25krpm or as5047d only 14krpm) sensor
-   * rs485
-   * swd programming port
-     * JST-6 pin
-   * usb
-     * micro-usb
-   * motor temperature sensor
-   * motor output absolute encoder / position sensor
-
-Validate r2 of gearbox
-  * Order 2x more if it works well
 
 Absolute position board
   * 8x DRV5053 hall effect sensors
@@ -48,23 +16,24 @@ Absolute position board
   * two magnets in planet carrier 1, configured with opposite polarities
   * I2C slave
 
-Design leg
-
 Weigh all the gearbox components
 
 Do mechanics to figure out what torque is necessary to jump given
 linkage
 
-
-
 # Master Plan #
- * Build another single shapeways gearbox
- * If that works well enough, build 2 more 3d printed gearboxes
+ * Rev shapeways box with slightly different tolerances
  * get 2dof leg jumping
+ * Get one more shapeways set
  * get 3dof leg jumping
 
  * design custom gears, get prototyping run sufficient to build one mammal plus spares
 
+
+DONE 2018-11-04
+ * Got down to 20 unique parts
+ * Reviewed STM32 and DRV8323 design notes
+ * Iterated on MF quoting to fix other minor layout and silk problems
 
 DONE 2018-11-03
  * Verified PWM and ADC channels work on nucleo
