--- a/TODO
+++ b/TODO
@@ -1,15 +1,16 @@
 Write controller board SW
- * Get currents to be metricly correct
+ * Implement auto-theta/phase calibrate
+
  * Scope to see what the power bus looks like when under load
 
  * Implement current control
  * Implement FOC
- * Implement AS5047 interface
  * Figure out how to get velocity from AS5047 quadrature inputs
  * Need board
    * Get current control working
    * Get FOC working
  * Design serial 485 frame protocol
+ * Implement software over-voltage fault
 
  * Measure temperature at different loads
  * Test undervoltage response
@@ -42,6 +43,11 @@ linkage
 
  * design custom gears, get prototyping run sufficient to build one mammal plus spares
 
+
+DONE 2018-11-21
+ * Got phase currents to be metricly correct
+ * Configured DRV8323
+ * Implemented AS5047 interface
 
 DONE 2018-11-20
  * Wrote board bringup class
