--- a/TODO
+++ b/TODO
@@ -1,8 +1,26 @@
-Write controller board SW
- * Design serial 485 frame protocol
- * Build second gearbox
- * Rewire to power both gearboxes
- * Apply more grease to gearbox
+ * Create servo state machine that sequences things on in a reliable order
+ * Create a command to exit the control state machine back to stopped
+ * Figure out why gbx 3 is stiffer than 2 by a lot
+ * Figure out if gbx2 inner ring actually slipped... affix it better
+
+ * Try to get more transient current than 35A through the motor
+ * Need to be able to accurately report current plot during jump event
+   w/ at least ms resolution
+ * Measure thermal performance in jumping loads
+ * Make a more permanent jumping fixture, including with a better
+   linear rail
+ * Measure how weight affects the jump time
+
+ * Fix gearbox v3 errata (possibly just do an assembly that could work
+   on a mech, so enclosed controller)
+
+ * Closed loop control full trajectory during jump
+   * Might need another STM32, could be a prototype for a joint
+     controller
+
+ * Leg needs to be stiffer laterally
+ * Leg needs a way to assemble that doesn't have bolts sticking far out
+ * Leg needs more clearance from front plate of servo
 
  * Actually tune current control loop to measure BW
 
@@ -11,6 +29,10 @@ Write controller board SW
  * Figure out how to get velocity from AS5047 quadrature inputs
  * Get AS5047 SPI sampling to be faster
 
+ * Get python telemetry stuff into moteus/mjlib
+ * Get tview into moteus/mjlib repository
+
+ * Figure out a way to enclose the control board for actual mounting
 
  * automatically advance position for velocity
  * Report firmware version over serial protocol
@@ -47,6 +69,13 @@ linkage
 
  * design custom gears, get prototyping run sufficient to build one mammal plus spares
 
+
+DONE 2018-12-01
+ * First jump!
+
+DONE 2018-11-30
+ * Got 485 serial based transport and tview working
+ * Built second motor and controller
 
 DONE 2018-11-23
  * unwrapped encoder position
